@@ -2626,7 +2626,45 @@ name|AccessControlException
 name|e
 parameter_list|)
 block|{
-comment|// expected
+name|assertTrue
+argument_list|(
+literal|"Permission denied messages must carry the username"
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|USER1_NAME
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Permission denied messages must carry the path parent"
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|p1
+operator|.
+name|getParent
+argument_list|()
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 name|Path
 name|badPath
@@ -2806,7 +2844,45 @@ name|AccessControlException
 name|e
 parameter_list|)
 block|{
-comment|// expected
+name|assertTrue
+argument_list|(
+literal|"Permission denied messages must carry the username"
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|USER1_NAME
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Permission denied messages must carry the path parent"
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|p2
+operator|.
+name|getParent
+argument_list|()
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 annotation|@
@@ -2933,7 +3009,45 @@ name|AccessControlException
 name|e
 parameter_list|)
 block|{
-comment|// expected
+name|assertTrue
+argument_list|(
+literal|"Permission denied messages must carry the username"
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|USER1_NAME
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Permission denied messages must carry the path parent"
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+name|p3
+operator|.
+name|getParent
+argument_list|()
+operator|.
+name|toUri
+argument_list|()
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 comment|/* Check if namenode performs permission checking correctly     * for the given user for operations mkdir, open, setReplication,     * getFileInfo, isDirectory, exists, getContentLength, list, rename,    * and delete */
